// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShippingAddressesDropdown/> should call addCheckoutBillingAddress when address option is selected 1`] = `
Array [
  Array [
    Object {
      "cart": Object {
        "base_amount": 78,
        "cart_amount": 93.6,
        "channel_id": 1,
        "coupons": Array [],
        "created_time": "2022-12-02T11:50:22+00:00",
        "currency": Object {
          "code": "EUR",
        },
        "customer_id": 1,
        "discount_amount": 0,
        "discounts": Array [
          Object {
            "discounted_amount": 0,
            "id": "3aee2b2f-9182-4d16-82ae-734dced3d218",
          },
        ],
        "email": "alexandru.daineanu+bigcommerce@gorgias.com",
        "id": "c58d3aac-244c-4405-bad5-638b555bc31b",
        "line_items": Object {
          "custom_items": Array [],
          "digital_items": Array [],
          "gift_certificates": Array [],
          "physical_items": Array [
            Object {
              "coupon_amount": 0,
              "coupons": Array [],
              "discount_amount": 0,
              "discounts": Array [],
              "extended_list_price": 78,
              "extended_sale_price": 78,
              "id": "3aee2b2f-9182-4d16-82ae-734dced3d218",
              "image_url": "https://cdn11.bigcommerce.com/r-4b20dad619e29ebf3490f7f35369a8220637ce48/themes/ClassicNext/images/ProductDefault.gif",
              "is_mutable": true,
              "is_require_shipping": true,
              "list_price": 78,
              "name": "test 102",
              "original_price": 78,
              "parent_id": null,
              "product_id": 245,
              "quantity": 1,
              "sale_price": 78,
              "sku": "",
              "taxable": true,
              "url": "https://max-mad-store.mybigcommerce.com/test-102/",
              "variant_id": 324,
            },
          ],
        },
        "locale": "en",
        "tax_included": false,
        "updated_time": "2022-12-02T11:52:28+00:00",
      },
      "integrationId": 1,
      "selectedAddress": Object {
        "address1": "Random Street 19",
        "address2": "",
        "address_type": "residential",
        "city": "Paris",
        "company": "test",
        "country": "France",
        "country_code": "FR",
        "customer_id": 160,
        "email": "test2@gorgias.com",
        "first_name": "A",
        "id": 13,
        "last_name": "Test 2",
        "phone": "",
        "postal_code": "507051",
        "state_or_province": "Paris",
      },
      "setCheckout": [MockFunction],
    },
  ],
]
`;

exports[`<ShippingAddressesDropdown/> should display \`No results\` when shippingAddresses = [] & snapshot should render \`Select from address book...\` 1`] = `
<div>
  <div>
    <p
      class="subsection mt-4"
    >
      Fulfillment
    </p>
    <label
      class="label subsectionSmall mb-2"
    >
      Shipping address
      <abbr
        aria-label="required"
        class="abbr"
        title="required"
      >
        *
      </abbr>
    </label>
    <div
      class="wrapper"
      role="listbox"
      tabindex="0"
    >
      <div
        class="inputWrapper isFocused"
      >
        <div
          class="input isGreyed"
        >
          Select from address book...
        </div>
        <i
          class="affix suffix toggle material-icons"
        >
          arrow_drop_down
        </i>
      </div>
    </div>
    <p
      class="infoText"
    >
      Same address will be used for billing address.
    </p>
  </div>
</div>
`;

exports[`<ShippingAddressesDropdown/> snapshot renders the selected shipping address instead of \`Select from address book...\` 1`] = `
<div>
  <div>
    <p
      class="subsection mt-4"
    >
      Fulfillment
    </p>
    <label
      class="label subsectionSmall mb-2"
    >
      Shipping address
      <abbr
        aria-label="required"
        class="abbr"
        title="required"
      >
        *
      </abbr>
    </label>
    <div
      class="wrapper"
      role="listbox"
      tabindex="0"
    >
      <div
        class="inputWrapper"
      >
        <div
          class="input"
        >
          A Test 2, Random Street 19, 507051 Paris, Paris, FR, France
        </div>
        <i
          class="affix suffix toggle material-icons"
        >
          arrow_drop_down
        </i>
      </div>
    </div>
    <p
      class="infoText"
    >
      Same address will be used for billing address.
    </p>
  </div>
</div>
`;
